# libmlxcc

mlxcc/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  configure.ac  reconf
mlxcc/docs/: Doxyfile.in  License.rtf  Makefile.am  ReadMe.rtf  Welcome.rtf  large-file-support.txt  minimal-curl-config.txt  wire-protocol-notes.txt
mlxcc/include/: Makefile.am
mlxcc/include/marklogic/: Makefile.am  globals.h  xcc.h  xcc_strbuf.h
mlxcc/src/: Makefile.am  xcc.c  xcc_strbuf.c
mlxcc/swig/: Makefile.am  constants.i  perl-typemaps.i  perl.i  python-typemaps.i  python.i  ruby-typemaps.i  ruby.i  xcc.i
mlxcc/test/: Makefile.am  data.xml  load.c  load_binary.c  query.c  query_binary.c  test_auth.h  thread.c
xcc-perl/: Changes  MANIFEST  Makefile.PL  README  xcc-perl.c
xcc-perl/lib/: Xcc.pm
xcc-perl/lib/Xcc/: Version.pm
xcc-perl/t/: Xcc.t
xcc-php/: CREDITS  config.m4  php_xcc.c  php_xcc.h  xcc.php
xcc-php/docs/docbook/: configure.xml  constants.xml  functions.xml  reference.xml
xcc-php/docs/docbook/functions/: xcc-add-permission.xml  xcc-close.xml  xcc-content-collections.xml  xcc-content-format.xml  xcc-content-from-file.xml  xcc-content-from-string.xml  xcc-content-repair.xml  xcc-content_namespace.xml  xcc-error.xml  xcc-fetch-next.xml  xcc-insert-content.xml  xcc-new-adhoc-query.xml  xcc-new-module-invoke.xml  xcc-new-module-spawn.xml  xcc-new-session.xml  xcc-server-info.xml  xcc-set-variable.xml  xcc-submit-query.xml  xcc-submit-request.xml  xcc_content_quality.xml
xcc-php/docs/html/: function.xcc-add-permission.html  function.xcc-close.html  function.xcc-content-collections.html  function.xcc-content-format.html  function.xcc-content-from-file.html  function.xcc-content-from-string.html  function.xcc-content-namespace.html  function.xcc-content-quality.html  function.xcc-content-repair.html  function.xcc-error.html  function.xcc-fetch-next.html  function.xcc-insert-content.html  function.xcc-new-adhoc-query.html  function.xcc-new-module-invoke.html  function.xcc-new-module-spawn.html  function.xcc-new-session.html  function.xcc-server-info.html  function.xcc-set-variable.html  function.xcc-submit-query.html  function.xcc-submit-request.html  ref.xcc.html
xcc-php/tests/: 001.phpt
xcc-python/: ChangeLog  MANIFEST  README  setup.py
xcc-python/test/: test.py
xcc-python/xcc/: __init__.py  xcc-python.c
xcc-ruby/: ChangeLog  README  Rakefile  TODO  extconf.rb  xcc-ruby.c
xcc-ruby/lib/: xcc.rb
xcc-ruby/lib/xcc/: document.rb  util.rb  version.rb
xcc-ruby/samples/: mldeploy
xcc-ruby/stubs/: xcc-stub.rb
xcc-ruby/test/: tc_basic_test.rb  tc_bind_params_test.rb  tc_cmp_chars.rb  tc_document_test.rb  tc_invoke_test.rb  tc_load_test.rb  tc_query_test.rb  tc_spawn_test.rb  xcc_test.rb
xcc-ruby/test/support-files/: chars-input.xml
